[project]
name = "process-plot"
version = "0.1.0"
description = "A project to monitor and plot CPU and memory usage."
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib",
    "pandas"
]

[tool.scripts]
render = { callable = "src.render:main" }