[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "process-plot"
version = "0.1.0"
description = "Process monitoring and plotting tool"
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "matplotlib",
    "pandas",
]

[project.scripts]
process-plot = "src.process_plot:main"